# versiongit

./: .gitignore  .gitlab-ci.yml  .gitremotes  .mypy.yml  .templated_gitlab-ci.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  Pipfile  README.rst  setup.cfg  setup.py
.github/workflows/: code.yml
2.0/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
2.0/.doctrees/: environment.pickle
2.0/_sources/explanations/: how-it-works.rst.txt
2.0/_sources/how-to/: make-a-release.rst.txt
2.0/explanations/: how-it-works.html
2.0/how-to/: make-a-release.html
2.0/reference/: contributing.html  version-number-format.html
2.0/tutorials/: installation.html
2.1/: genindex.html  index.html  objects.inv  search.html
2.1/.doctrees/: environment.pickle
2.1/.doctrees/how-to/: make-a-release.doctree
2.1/.doctrees/reference/: contributing.doctree
2.1/_sources/tutorials/: installation.rst.txt
2.1/reference/: version-number-format.html
2.2/: .buildinfo  genindex.html  index.html  objects.inv  search.html
2.2/.doctrees/: environment.pickle
2.2/.doctrees/explanations/: how-it-works.doctree
2.2/.doctrees/tutorials/: installation.doctree
2.2/explanations/: how-it-works.html
2.2/how-to/: make-a-release.html
2.2/reference/: contributing.html  version-number-format.html
2.2/tutorials/: installation.html
docs/: conf.py  contents.rst  index.rst
docs/_static/: theme_overrides.css
docs/_templates/: layout.html
docs/reference/: api.rst  version-number-format.rst
master/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
master/.doctrees/: environment.pickle  index.doctree
master/.doctrees/reference/: version-number-format.doctree
master/_static/: documentation_options.js
master/explanations/: how-it-works.html
master/how-to/: make-a-release.html
master/reference/: contributing.html  version-number-format.html
master/tutorials/: installation.html
tests/: test_command.py  test_versiongit.py
versiongit/: __init__.py  _version_git.py  command.py  versiongit.py
