[metadata]
name = versiongit
# description = Module  # a short description of the module
author = 'Tom Cobb',
author_email = 'tom.cobb@diamond.ac.uk',
license = Apache License 2.0
long_description = file: README.rst

[options]
packages = versiongit
# install_requires = cothread
# If you want to include data files in packages,
# set this to True and include a MANIFEST.in file.
include_package_data = False

[options.entry_points]
console_scripts =
    version-git = versiongit.command:main

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True
files = versiongit,tests

[flake8]
# Make flake8 compatible with black defaults
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
# Tests import from the test package.
application-import-names = versiongit
import-order-style = smarkets

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
testpaths = tests
addopts = --tb=native -vv --continue-on-collection-errors --black --flake8
