[metadata]
name = versiongit
# description = Module  # a short description of the module
author = Tom Cobb
author_email = tom.cobb@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst

[options]
packages = find:
# install_requires = cothread
# If you want to include data files in packages,
# set this to True and include a MANIFEST.in file.
include_package_data = False

[options.entry_points]
console_scripts =
    version-git = versiongit.command:main

[options.packages.find]
exclude = tests

[isort]
# https://black.readthedocs.io/en/stable/the_black_code_style.html?highlight=isort#how-black-wraps-lines
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = --tb=native -vv --continue-on-collection-errors --flake8 --black
