[metadata]
name = versiongit
description = Tool for adding version from git to a python project without adding dependencies
url = https://github.com/dls-controls/versiongit
author = Tom Cobb
author_email = tom.cobb@diamond.ac.uk
license = CC0 1.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = tests

[options.entry_points]
# Include a command line script
console_scripts =
    versiongit = versiongit.command:main

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true
skip=setup.py,conf.py,build

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --flake8 --black --mypy --doctest-modules --doctest-glob="*.rst"
     --cov=versiongit --cov-report term --cov-report xml:cov.xml
